--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <title>Park lister</title>
-    <link rel="shortcut icon" href="">
+    
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -13,8 +13,9 @@
         <h1>National Park lister</h1>
 
         <form id="park-form">
-            <label for="search-state">What state? Enter abreviation</label>
-            <input type="text" name="search-state" id="search-state" maxlength="2" required><br>
+            <label for="search-state">What states? Enter abreviation. For multiple states, seperate the abreviations by a comma AND a space (ex. NY, NJ).
+            </label>
+            <input type="text" name="search-state" id="search-state" required><br>
             <label for="max-num">Maximum number of Parks?</label>
             <input type="number" id="max-num" value="10"> 
 
